# pkg/topsecret/routes.go
@@ -14,4 +14,5 @@ func (r Routes) RegisterRoutes(router *gin.RouterGroup) {
 	router.POST("/topsecret", r.handler.TopSecret)
 	// router.POST("/topsecret_split/:satellite_name", r.handler.TopSecretSplit)
 	// router.GET("/topsecret_split", r.handler.TopSecretSplitGet)
+	router.GET("/topsecret_split/info", r.handler.TopSecretSplitInfo)
 }
